--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,9 +1,10 @@
 {
   "pdfExportSettings": {
     "includeName": true,
-    "pageSize": "Letter",
+    "pageSize": "Legal",
     "landscape": false,
-    "margin": "0",
+    "margin": "2",
     "downscalePercent": 100
-  }
+  },
+  "alwaysUpdateLinks": true
 }
