--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,5 +6,8 @@
     "margin": "2",
     "downscalePercent": 100
   },
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "useMarkdownLinks": false,
+  "attachmentFolderPath": "imgs",
+  "promptDelete": false
 }
